<resources tools:ignore="MissingTranslation"
    xmlns:tools="http://schemas.android.com/tools">


    <!-- Common -->
    <string name="submit">Submit</string>
    <string name="waiting">Waiting Time</string>

    <!-- Taxi pickup -->
    <string name="taxi_pickup_location">Pickup Location</string>
    <string name="taxi_drop_location" tools:ignore="ExtraTranslation">Drop Location</string>
    <string name="taxi_sos">SOS</string>

    <!-- invoice -->
    <string name="taxi_invoice">Invoice</string>
    <string name="taxi_source_destination">Source and Destination</string>
    <string name="taxi_invoice_total">Total</string>
    <string name="taxi_confirm_payment">Confirm Payment</string>
    <string name="taxi_confirm_done">Done</string>
    <string name="taxi_invoice_booking_id">Booking ID</string>
    <string name="taxi_distance_travelled">Distance Travelled</string>
    <string name="taxi_invoice_time_taken">Time Taken</string>
    <string name="taxi_invoice_base_fare">Base Fare</string>
    <string name="taxi_invoice_distance_fare">Distance Fare</string>
    <string name="taxi_invoice_tax">Tax</string>
    <string name="taxi_invoice_Tips">Tips</string>
    <string name="taxi_invoice_toll">Toll</string>
    <string name="taxi_invoie_add">ADD</string>
    <string name="taxi_invoice_peak_charge">Peak charge</string>
    <string name="taxi_invoice_total_fare">Total Fare</string>
    <string name="taxi_invoice_sub_total">Sub Total</string>
    <!-- OTP -->
    <string name="otp_label">Enter OTP</string>
    <string name="otp_call">Call</string>
    <string name="otp_chat">Chat</string>
    <string name="otp_start_trip">Start Trip</string>

    <!-- Toll Charge -->
    <string name="toll_label">TOLL CHARGE</string>
    <string name="toll_submit">Submit</string>
    <string name="toll_cancel">Cancel</string>
    <string name="empty_toll_charge">Please enter the Toll charge</string>
    <string name="invalid_toll_charge">Please enter the valid Toll charge</string>

    <!-- Rating -->
    <string name="rating_label">Rating</string>
    <string name="rate_your_customer">Rate your Customer</string>
    <string name="rate_comments">Leave your comments</string>

    <!-- Ride status -->
    <string name="taxi_pickup_approve">Approve</string>
    <string name="taxi_pickup_cancel">Cancel</string>
    <string name="taxi_tab_dropped">Tap When Dropped</string>
    <string name="taxi_pickup_arrived">Arrived</string>

    <!-- Support -->
    <string name="support">Support</string>
    <string name="support_team_text">You can contact our team at any time for you queries</string>
    <string name="call">Call</string>
    <string name="mail">Mail</string>
    <string name="website">Website</string>

    <!-- Facebook -->

    <string name="placeholder_string" translatable="false">xXx xXx xXx</string>
    <string name="taxi_pickup">Pick Up</string>
    <string name="any_toll" translatable="false" tools:ignore="ExtraTranslation">Do you have andy Toll charge</string>
    <string name="request_canceled">Request Canceled Successfully</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="waiting_timer_running">Waiting timer is on, switch off to proceed</string>
    <string name="taxi_invoice_waiting_charge">Waiting charge</string>
    <string name="reason">Reason</string>
    <string name="dummy_num">1234</string>
    <string name="start_timer">00:00:00</string>
    <string name="dotdotdot">...</string>
    <string name="toll_charge_desc">Do you have any Toll charge</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="click_back_exit">Please click back again to exit</string>
    <string name="payable">Payable</string>
    <string name="select_location">Select Location</string>
    <string name="enter_your_location">Enter your location</string>
    <string name="outstation_type">Outstation Type</string>
    <string name="rental_package">Rental package</string>
    <string name="book_for_some_one_user_info">Book for some one user info</string>
    <string name="provider_commision">Commission</string>
    <string name="provider_earning">Provider Earning</string>
    <string name="provider_payable">Provider Payable</string>

</resources>
