<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="otpviewmodel"
            type="com.gox.taxiservice.views.verifyotp.VerifyOTPModule" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_20sdp"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_label_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/otp_label"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <EditText
            android:id="@+id/ed_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_otp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/bg_grey_square"
            android:ems="6"
            android:gravity="center"
            tools:hint="1234"
            android:inputType="number"
            android:letterSpacing="0.35"
            android:maxLength="4"
            android:padding="10dp" />

        <LinearLayout
            android:id="@+id/ll_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_otp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:visibility="gone"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/black_sqaure"
                android:text="@string/otp_call"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_weight="0.5"
                android:background="@drawable/black_sqaure"
                android:text="@string/otp_chat"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_start_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_call"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/otp_start_trip"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            app:backgroundTint="@color/taxi_bg_yellow"
            app:cornerRadius="5dp"/>

    </RelativeLayout>

</layout>