<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="invoicemodel"
            type="com.xjek.taxiservice.views.invoice.InvoiceModule"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_invoice_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/taxi_invoice"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_13sdp"/>

        <ImageView
            android:id="@+id/iv_invoce"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:background="@drawable/grey_circle"
            android:layout_below="@+id/tv_invoice_label"
            android:layout_marginTop="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/ll_trip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_invoce"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_grey_square"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_12sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingRight="@dimen/_12sdp"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taxi_source_destination" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.05"
                        android:gravity="center"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:src="@drawable/grey_circle" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_weight="0.95">
                        <TextView
                            android:id="@+id/tv_pickup_location"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_8sdp"
                            android:fontFamily="@font/avenirltstd_medium"
                            android:text="223323333333333333faffadfdfdaf\n dfdfdfdfadfadfadfdfdfdfdf"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.05"
                        android:gravity="center"
                        android:orientation="vertical">
                        <View
                            android:layout_width="2dp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:background="@color/grey"
                            android:src="@drawable/grey_circle" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_vertical"
                        android:layout_weight="0.95">
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


</LinearLayout>


        <LinearLayout
            android:id="@+id/ll_trip_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_trip_address"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_grey_square"
            android:orientation="vertical">

            <include layout="@layout/layout_status_indicators" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_booking_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_trip_status"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_grey_square"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_booking_id"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_mng_consigner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.bookingId}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_label_distance_travelled"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_distance_travelled"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.distance}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_invoice_label_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_time_taken"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_invoice_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.timeTaken}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_invoice_lable_fare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_base_fare"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_fare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.baseFare}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_label_distance_fare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_distance_fare"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_distance_fare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.distanceFare}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_invoice_label_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_tax"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_invoice_tax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.tax}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_invoice_label_tips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_Tips"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_invoice_tips"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@={invoicemodel.tips}"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_toll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_toll"
                    android:textColor="@color/black"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/tv_add_toll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:text="@string/taxi_invoie_add"
                    android:textColor="#83d0f2"
                    android:onClick="@{() -> invoicemodel.openTollDialog()}"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal"
                android:background="#DEDEDE"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tv_invoice_label_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.60"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/taxi_invoice_total"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <TextView
                    android:id="@+id/tv_invoice_total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:gravity="end"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>



        </LinearLayout>


        <TextView
            android:id="@+id/tv_confirm_payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_yellow_curve"
            android:layout_below="@+id/ll_booking_detail"
            android:text="@string/taxi_confirm_payment"
            android:textColor="@color/white"
            android:fontFamily="@font/avenirltstd_medium"
            android:textSize="@dimen/_13sdp"
            android:gravity="center"
            android:paddingTop="@dimen/_11sdp"
            android:paddingBottom="@dimen/_11sdp"
            android:layout_marginLeft="@dimen/_13sdp"
            android:layout_marginRight="@dimen/_13sdp"
            android:onClick="@{() -> invoicemodel.openRatingDialog()}"
            android:layout_marginTop="@dimen/_30sdp"/>
    </RelativeLayout>
    </ScrollView>
</layout>