<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <data>

        <variable
            name="ratingmodel"
            type="com.xjek.taxiservice.views.rating.RatingViewModel" />
    </data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8F7F6"
        android:paddingBottom="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/rating_label"
            android:textColor="@color/taxi_bg_yellow"
            android:textSize="@dimen/_15sdp" />

        <LinearLayout
            android:id="@+id/ll_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_label_rating"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_half_circle_rectangle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/flower" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/bg_grey_square"
                android:orientation="vertical"
                android:paddingLeft="@dimen/_15sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp">

                <TextView
                    android:id="@+id/tv_rating_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="boopathi"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:id="@+id/tv_booking_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="Booking ID"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/rate_your_customer"
            android:textColor="@color/taxi_bg_yellow"
            android:textSize="@dimen/_15sdp" />

        <RatingBar
            android:id="@+id/rv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_rating_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:numStars="5"
            android:stepSize="1" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_rating_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rv_user"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_15sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/avenirltstd_medium"
                android:hint="@string/rate_comments"
                android:inputType="text"
                android:minHeight="@dimen/_80sdp"
                android:textSize="@dimen/_13sdp" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tv_rating_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cv_rating_comments"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/bg_yellow_curve"
            android:fontFamily="@font/avenirltstd_medium"
            android:gravity="center"
            android:onClick="@{() -> ratingmodel.gotoAppModule()}"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>